Fix timeline overlapping header

--- a/src/components/HeaderPanel/HeaderPanel.scss
+++ b/src/components/HeaderPanel/HeaderPanel.scss
@@ -4,7 +4,7 @@
   position: fixed;
   width: 100%;
   background: #fff;
-  z-index: 1;
+  z-index: 98;
 
   :global(.mdc-button) {
     margin-top: 56px;
